# voxformat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio_capturer.cpp  audio_capturer.h  document_formatter.cpp  document_formatter.h  main.cpp  setup.sh  text_segment.h  utils.cpp  utils.h  whisper_processor.cpp  whisper_processor.h
outputs/: output.md  output.txt
